# fast

./: .env  AGENTS.md  README.md  pyproject.toml  setup.sh
app/: app.py  main.py
app/api/v1/: example.py
app/core/: config.py
app/services/: ai.py
prompts/: init_app_codex.md
tests/: test_ping.py
